--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-JIRA_URL=https://criteo.atlassian.net
-JIRA_USERNAME=g.handley@criteo.com
+BASE_DOMAIN=yourdomain.com
+JIRA_URL=https://example.atlassian.net
+JIRA_USERNAME=example@example.com
 JIRA_API_TOKEN=example-api-token
 
-CONFLUENCE_URL=https://criteo.atlassian.net
-CONFLUENCE_USERNAME=g.handley@criteo.com
+CONFLUENCE_URL=https://example.atlassian.net
+CONFLUENCE_USERNAME=example@example.com
 CONFLUENCE_API_TOKEN=example-api-token
